--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Arvo', serif;
-    text-align: justify;
 }
 
 .gallery {
@@ -199,12 +198,9 @@ hr {
     transform: scale(1.1);
 }
 
-/* ... (Előző kód rész) ... */
-
-/* Media query a reszponzív elrendezéshez */
 @media screen and (max-width: 768px) {
     body {
-        font-family: Arial, sans-serif;
+        font-family: 'Arvo', serif;
     }
 
     .img2{
